# corpus_distance

./: CODEOWNERS  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: code_analysis.yml  docker.yml  main.yml  main_post_merge.yaml  main_post_merge.yml  pre_merge.yml  release_post_merge.yml  test-pyPI.yaml
data/Gospel/: Gospel.Croatian.txt
example/: Corpus_distance_tutorial.ipynb
src/corpus_distance/: cdutils.py  data_loading.py  pipeline.py
src/corpus_distance/clusterisation/: clusterisation.py  utils.py
src/corpus_distance/data/: config.json  data_resources.py  gospels.csv
src/corpus_distance/data_preprocessing/: data_pipeline.py  topic_modelling.py  vectorisation.py
src/corpus_distance/distance_measurement/: analysis.py  frequency_metrics.py  hybridisation.py  metrics_pipeline.py  string_similarity.py
src/data/Gospel/: Gospel.Slovak.txt  Gospel.Slovenian.txt
tests/: test_placeholder.py
tests/data_preprocessing/: test_topic_modelling.py
