[build-system]
requires = ["setuptools>=67.7.2"]
build-backend = "setuptools.build_meta"

[project]
name = "corpus_distance"
version = "0.7.1"
authors = [
  { name="Ilia Afanasev", email="ilia.afanasev.1997@gmail.com" },
]
description = "Python package for measuring distance between the lects represented by small raw corpora"
readme = "README.md"
requires-python = ">=3.12.0, <3.14.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
]
dependencies = [
  "setuptools>=67.7.2",
  "biopython==1.86",
  "gensim==4.4.0",
  "Levenshtein==0.27.3",
  "matplotlib==3.10.8",
  "numpy==2.4.0",
  "pandas==2.3.3",
  "pyjarowinkler==3.0.0",
  "scipy==1.16.3",
  "tqdm==4.67.1",
  "packaging==25.0"
]

[project.urls]
Homepage = "https://github.com/The-One-Who-Speaks-and-Depicts/corpus_distance"
Issues = "https://github.com/The-One-Who-Speaks-and-Depicts/corpus_distance/issues"